--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.90.11",
     "clsx": "^2.1.1",
+    "howler": "^2.2.4",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.24",
     "next-themes": "^0.4.6",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/howler": "^2.2.12",
     "@types/node": "^24.6.1",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
